# mouse-tracking-runtime

./: .gcloudignore  .gitignore  .gitmodules  Dockerfile  README.md  infer-fecal-boli-beta.sh  infer-multi-pose-pipeline-v6.sh  infer-multi-poseest-batch.sh  infer-obj-seg.sh  infer-poseest-batch-v3.sh  infer-poseest-batch.sh  infer-single-pose-pipeline-v6.sh  infer-single-pose.py  infer-single-segmentation.py  infer-test-data.sh  main.nf  nextflow.config  notes.md  pyproject.toml  requirements.txt  run-single-mouse.sh  run_compression.nf  submit-nextflow.sh  test-multi-mouse-pose.sh  test-nextflow.sh  test-single-pose-model.py  test-single-seg-model.py  testmodels-2019-05-04.bash  topdown.md  train-multi-mouse-pose.sh
.github/: cloudbuild.yaml
.github/workflows/: _build-docker-action.yml  _format-lint-action.yml  _run-tests-action.yml  docker-build.yml  gcp-docker-build.yml  pr-verification.yml  pull-request.yml
deployment_runtime/: aggregate_fecal_boli.py  downgrade_multi_to_single.py  flip_xy_field.py  infer_arena_corner.py  infer_fecal_boli.py  infer_lixit.py  infer_multi_identity.py  infer_multi_pose.py  infer_multi_segmentation.py  infer_single_pose.py  infer_single_segmentation.py  render_pose.py  stitch_tracklets.py
deployment_runtime/lightning_inference/: __init__.py  multi_pose.py  single_pose.py
deployment_runtime/models/: __init__.py  model_definitions.py
deployment_runtime/ort_inference/: __init__.py  arena_corners.py  fecal_boli.py  multi_pose.py  single_pose.py  single_segmentation.py  test_multi_pose_model.py  test_single_seg_model.py
deployment_runtime/tfs_inference/: __init__.py  arena_corners.py  food_hopper.py  lixit.py  multi_identity.py  multi_segmentation.py  single_segmentation.py
deployment_runtime/utils/: __init__.py  fecal_boli.py  hrnet.py  identity.py  matching.py  pose.py  prediction_saver.py  segmentation.py  static_objects.py  timers.py  writers.py
docker/: Dockerfile  README.md  cloudbuild.yaml
docs/: nextflow-tests.md
docs/pose/: file_format.md
experiments/multimouse/: multimouse-1.yaml  multimouse-2.yaml  multimouse-3.yaml  multimouse-4.yaml  multimouse-5.yaml  multimouse-6.yaml  multimouse_2019-11-19_1.yaml  multimouse_2019-11-19_10.yaml  multimouse_2019-11-19_2.yaml  multimouse_2019-11-19_3.yaml  multimouse_2019-11-19_4.yaml  multimouse_2019-11-19_5.yaml  multimouse_2019-11-19_6.yaml  multimouse_2019-11-19_7.yaml  multimouse_2019-11-19_8.yaml  multimouse_2019-11-19_9.yaml  multimouse_2019-12-19_1.yaml  multimouse_2019-12-19_2.yaml  multimouse_2019-12-19_3.yaml  multimouse_2019-12-19_4.yaml  multimouse_2019-12-19_5.yaml  multimouse_2019-12-19_6.yaml  multimouse_2019-12-19_7.yaml  multimouse_2019-12-19_8.yaml  multimouse_2019-12-31_1.yaml  multimouse_2020-01-15_1.yaml  multimouse_2020-01-17_01.yaml  multimouse_2020-01-17_02.yaml  multimouse_2020-01-17_03.yaml  multimouse_2020-01-17_04.yaml  multimouse_2020-01-17_05.yaml  multimouse_2020-01-17_06.yaml  multimouse_2020-01-17_07.yaml  multimouse_2020-01-17_08.yaml  multimouse_2020-01-17_09.yaml  multimouse_2020-01-17_10.yaml  multimouse_2020-01-17_11.yaml  multimouse_2020-01-17_12.yaml  multimouse_2020-01-17_13.yaml  multimouse_2020-01-17_14.yaml  (+29 more)
experiments/objseg/: objseg.yaml
lib/config/: default.py
lib/core/: assocembedfunc.py  assocembedloss.py  function.py
lib/dataset/: OpenFieldObjDataset.py  __init__.py  hdf5mousepose.py  multimousepose.py
lib/models/: pose_hrnet.py
lib/utils/: assocembedutil.py  assocembedutil_np.py  utils.py  xform.py
models/model-cards/: render_cards.py
mouse-tracking-runtime/: __init__.py  aggregate_fecal_boli.py  clip_video_to_start.py  flip_xy_field.py  infer_fecal_boli.py  infer_food_hopper.py  infer_multi_identity.py  infer_multi_pose.py  infer_single_pose.py  infer_single_segmentation.py  qa_single_pose.py  render_pose.py  stitch_tracklets.py
mouse-tracking-runtime/lightning_inference/: __init__.py  fecal_boli.py  multi_pose.py  single_pose.py
mouse-tracking-runtime/models/: __init__.py  model_definitions.py
mouse-tracking-runtime/ort_inference/: __init__.py  fecal_boli.py  multi_pose.py  test_multi_pose_model.py
mouse-tracking-runtime/pytorch_inference/: __init__.py  fecal_boli.py  multi_pose.py  single_pose.py
mouse-tracking-runtime/tfs_inference/: arena_corners.py  lixit.py  multi_identity.py  multi_segmentation.py
mouse-tracking-runtime/utils/: __init__.py  hrnet.py  matching.py  pose.py  prediction_saver.py  segmentation.py  static_objects.py  timers.py  writers.py
nextflow/bootstrap/: classifier_source.config  compress_and_transfer.sbatch  compress_dropbox_to_cloudian.nf  dropbox_to_cloudian.config  main.nf  nextflow.config
nextflow/modules/: compression.nf  dynamic_objects.nf  fecal_boli.nf  flexibility.nf  gait.nf  jabs_classifiers.nf  manual_correction.nf  multi_mouse.nf  utils.nf  (+4 more)
support_code/: RBase.def  behavior_summaries.R  behavior_summaries.py  read-trace-data.py  render_benchmark.py  sleap-1.4.1.def  sleap-io-0.2.0.def  static-object-correct.py
tools/: addpixelunits.py  concatmousepose.py  export-onnx.py  extractframes.py  findnetids.py  gathercvatframes.py  hdf5mouseposetest.py  importcornerannos.py  infercorners.py  inferencevideo_topdown.py  inferfecalbolicount.py  inferfecalbolicountbatch.py  infermousepose.py  infermultimousepose.py  inferobjects.py  minehardmultimouseframes.py  mousetrain.py  objecttrain.py  ofobjecttest.py  ofobjecttrain.py  rendervidoverlay.py  run-onnx.py  sampleframes.py  sampleposeintervals.py  testfecalboli.py  testmouseposemodel.py  testmultimouse.py  testmultimousedata.py  testmultimouseinference.py  topdown_test1.py  topdown_test2.py  trainmultimouse.py
utils/: pose.py  prediction_saver.py  segmentation.py  static_objects.py  writers.py
vm/: README.md  corner-detection-2021-08-25.def  deployment-runtime-RHEL7.def  deployment-runtime-RHEL9.def  multi-mouse-pose-2020-02-12.def  multi-mouse-pose-2022-05-19.def  onnx-runtime.def  onnx-runtime_RHEL7.def  onnx-runtime_RHEL9.def  pytorch-trt.def  singularity.def  train-mm-pose-cloudfactory.sh  video_inference_topdown.sh
(+139 files in other folders)
