[project]
name = "mouse-tracking"
version = "0.1.0"
description = "Runtime environment for mouse tracking experiments"
requires-python = ">=3.10"
packages = ["src/mouse_tracking"]
dependencies = [
    "click==8.1.8",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.57.0",
    "h5py==3.13.0",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.1",
    "mypy-extensions==1.0.0",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "opencv-python==4.11.0.86",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec==0.12.1",
    "pillow==11.2.1",
    "platformdirs==4.3.7",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "scipy==1.15.2",
    "six==1.17.0",
    "torch>=2.7.1",
    "typer>=0.16.0",
    "tzdata==2025.1",
    "yacs>=0.1.8",
]

[project.scripts]
mouse-tracking-runtime = "mouse_tracking.cli.main:app"
mouse-tracking = "mouse_tracking.cli.main:app"
mtr = "mouse_tracking.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
# Enable a selection of rules focused on code quality without being too restrictive
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "D",    # pydocstyle
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]

# Ignore specific rules that might be too strict
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D212",  # multi-line-summary-first-line (conflicts with D213)
    "D107",  # missing docstring in __init__
    "D105",  # missing docstring in magic method
    "D100",  # missing module docstring (optional for smaller scripts)
    "E501",  # line too long (handled by formatter)
]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__ files

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.2",
]
